# my-first-mkdocs

./: .release-it.yml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
about/: index.html
docs/: about.md  mermaid.md
mermaid/: index.html
search/: search_index.json
tutorial/00/: index.html
tutorial/01/: index.html
tutorial/02/: index.html
tutorial/03/: index.html
tutorial/04/: index.html
tutorial/05/: index.html
tutorial/06/: index.html
tutorial/07/: index.html
tutorial/08/: index.html
tutorial/09/: index.html
tutorial/10/: index.html
tutorial/11/: index.html
tutorial/12/: index.html
